# pytest-docker-service

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yaml
pytest_docker_service/: __init__.py  container.py  plugin.py
tests/: test_plugin.py
tests/e2e/: conftest.py  test_httpbin.py  test_postgres.py  test_postgres_container.py
